# kant

./: .editorconfig  .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  LICENSE.txt  Makefile  Pipfile  README.md  docker-compose.yml  setup.cfg  setup.py  tox.ini
.cache/v/pep8/: mtimes
docs/: .buildinfo  commands.rst  conf.py  events.rst  eventstore.rst  genindex.html  index.html  index.rst  installation.rst  objects.inv  projections.rst  reference.rst  search.html  searchindex.js  testing.rst
docs/.doctrees/: environment.pickle  index.doctree
kant/: __init__.py  aggregates.py  conftest.py  connection.py  exceptions.py  models.py  repositories.py
kant/aggregates/: __init__.py  base.py  exceptions.py  models.py
kant/datamapper/: base.py  exceptions.py  fields.py  models.py
kant/events/: __init__.py  base.py  exceptions.py  fields.py  models.py  serializers.py  stream.py
kant/eventstore/: __init__.py  connection.py  exceptions.py  query.py  queryset.py  repositories.py  schema.py  snapshots.py  stream.py
kant/projections/: __init__.py  base.py  exceptions.py  sa.py
sphinx/: conf.py
tests/: conftest.py  factories.py  fixtures.py  test_aggregates.py  test_connection.py  test_projections.py  test_repository.py  test_snapshots.py  test_sum.py  test_tracked_entity.py
tests/aggregates/: test_aggregates.py
tests/events/: test_eventmodel.py  test_events.py
tests/eventstore/: test_connection.py  test_eventstore.py  test_queryset.py  test_repositories.py  test_schema.py  test_stream.py
(+9 files in other folders)
