[aliases]
test=pytest

[tool:pytest]
addopts = --verbose --doctest-modules --pep8 --cov-config .coveragerc --cov=kant ./tests ./kant
pep8maxlinelength = 160

[build_sphinx]
source-dir = docs

[metadata]
name = Kant
version = attr: kant.__version__
home-page = http://github.com/patrickporto/kant
author = Patrick Porto
author_email = patrick.s.porto@gmail.com
description = A CQRS and Event Sourcing framework for Python
long-description = file: README
long-description-content_type = text/markdown
description-file = README.md
keywords = eventsourcing, cqrs, eventstore
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython

project_urls =
    'Bug Tracker'=https://github.com/patrickporto/kant/issues
    'Documentation'=https://kant.readthedocs.io/en/latest/
    'Source Code'=https://github.com/patrickporto/kant

[options]
zip_safe = false
include_package_data = false
packages = find:
install-requires =
    python-dateutil
    inflection
    cuid.py
    async_generator
    asyncio_extras
    aiopg
    sqlalchemy

setup_requires =
    pytest-runner

tests_require =
    pytest
    pytest-pycodestyle
    pytest-cov
    pytest-asyncio

python_requires = ~= 3.5
